<resources>
    <string name="app_name">Daily</string>
    <string name="weather">天气概况</string>
    <string name="English">英语</string>
    <string name="Next">继续下一句</string>
    <string name="Finish">学好了</string>
    <string name="Refresh">换一句</string>
    <string name="news">新闻热点</string>
    <string name="books">图书</string>
    <string name="articles">微信精选</string>
    <string name="settings">设置</string>
    <string name="night">夜间模式</string>
    <string name="about">关于</string>
    <string name="daily">每日</string>
    <string name="study">学习</string>
    <string name="news_details">新闻详情</string>
    <string name="city">城市</string>
    <string name="weather_info">天气信息</string>
    <string name="weather_now_detail">实况细节</string>
    <string name="update_time">更新时间</string>
    <string name="degree">温度</string>
    <string name="forecast">预报</string>
    <string name="today">今日</string>
    <string name="tmp">温度</string>
    <string name="fl">体感温度</string>
    <string name="wind_dir">风向</string>
    <string name="wind_sc">风力</string>
    <string name="wind_spd">风速</string>
    <string name="hum">相对湿度</string>
    <string name="pcpn">降雨量</string>
    <string name="vis">能见度</string>
    <string name="airquality">空气质量</string>
    <string name="aqi">AQI指数</string>
    <string name="pm25">PM2.5指数</string>
    <string name="qlty">质量</string>
    <string name="suggestion">生活建议</string>
    <string name="search">搜索</string>
    <string name="worldNews">国际新闻</string>
    <string name="homeNews">国内新闻</string>
    <string name="socialNews">社会新闻</string>
    <string name="aiNews">人工智能</string>
    <string name="itNews">IT资讯</string>
    <string name="vrNews">VR科技</string>
    <string name="mobileNews">移动互联</string>
    <string name="anecdoteNews">奇闻</string>
    <string name="healthyNews">健康新闻</string>
    <string name="travelNews">旅游新闻</string>
    <string name="sportNews">体育新闻</string>
    <string name="history_today">历史的今天</string>
    <string name="quotes">名言警句</string>
    <string name="poems">唐诗三百首</string>

    <string-array name="languages">
        <item>简体中文</item>
        <item>英语</item>
    </string-array>

    <string-array name="languages_value">
        <item>1</item>
        <item>0</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
