<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather"
            android:icon="@mipmap/ic_menu"
            android:title="@string/weather"/>
        <item
            android:id="@+id/nav_news"
            android:icon="@mipmap/ic_menu"
            android:title="@string/news"/>
        <item
            android:id="@+id/nav_books"
            android:icon="@mipmap/ic_menu"
            android:title="@string/books"/>
    </group>

    <item android:title="@string/daily">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_menu"
                android:title="@string/settings"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/ic_menu"
                android:title="@string/about"/>
        </menu>
    </item>


</menu>